.vscode/allianceuat_compare/force-app/main/default/objects/sirenum__ProActiveContract__c/fields/Custom_Invoice_Group_By__c.field-meta.xml
<CustomField>
    <fullName>Custom_Invoice_Group_By__c</fullName>
    <description>Defines how the Pay Transactions related to this Contract will be grouped onto an Invoice.
If used, the related Account &apos;Invoice Group By&apos; must be set to &apos;Invoice to Account&apos;.</description>
    <inlineHelpText>Defines how the Pay Transactions related to this Contract will be grouped onto an Invoice.
If used, the related Account &apos;Invoice Group By&apos; must be set to &apos;Invoice to Account&apos;.</inlineHelpText>
    <label>Custom Invoice Group By</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account &amp; Site</fullName>
            </value>
            <value>
                <fullName>Account</fullName>
            </value>
            <value>
                <fullName>Contract &amp; Site</fullName>
            </value>
            <value>
                <fullName>Contract</fullName>
            </value>
            <value>
                <fullName>Site &amp; Employee</fullName>
            </value>
            <value>
                <fullName>Site</fullName>
            </value>
            <value>
                <fullName>Branch</fullName>
            </value>
            <value>
                <fullName>Job Type</fullName>
            </value>
            <value>
                <fullName>Shift</fullName>
            </value>
            <value>
                <fullName>Award Classification</fullName>
            </value>
            <value>
                <fullName>Award Level</fullName>
            </value>
            <value>
                <fullName>PO Number</fullName>
            </value>
            <value>
                <fullName>Employee</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>