.vscode/allianceuat_compare/force-app/main/default/objects/sirenum__ProActiveContract__c/fields/Default_Invoice_Entity__c.field-meta.xml
<CustomField>
    <fullName>Default_Invoice_Entity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>All Pay Transactions related to this Contract will be assigned to this Invoice Entity for Invoicing.</description>
    <inlineHelpText>All Pay Transactions related to this Contract will be assigned to this Invoice Entity for Invoicing.</inlineHelpText>
    <label>Default Invoice Entity</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Invoice Entity</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>WFM Contracts (Default Invoice Entity)</relationshipLabel>
    <relationshipName>WFM_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>