.vscode/allianceuat_compare/force-app/main/default/objects/sirenum__ProActiveContract__c/fields/Default_Payroll_Time_Type__c.field-meta.xml
<CustomField>
    <fullName>Default_Payroll_Time_Type__c</fullName>
    <inlineHelpText>Defines the default Payroll Time Type set on Shift record when created or edited.</inlineHelpText>
    <label>Default Payroll Time Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_ext_sirint__Payroll_Time_Type</valueSetName>
    </valueSet>
</CustomField>