.vscode/allianceuat_compare/force-app/main/default/objects/sirenum__ProActiveContract__c/fields/Invoice_Email_CC__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Email_CC__c</fullName>
    <label>Invoice Email CC</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>