.vscode/allianceuat_compare/force-app/main/default/objects/sirenum__ProActiveContract__c/fields/Invoice_Settings_Source__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Settings_Source__c</fullName>
    <description>Select the origin of the Invoice Settings for Assignments related to this Contract. Choose &apos;Contract&apos; if the settings should be specific to this Contract, or &apos;Account&apos; if the settings should be inherited from the related Account. If &apos;Contract&apos; is selected, the system will automatically create Invoice Settings related to this Contract.</description>
    <inlineHelpText>Select the origin of the Invoice Settings for Assignments related to this Contract. Choose &apos;Contract&apos; if the settings should be specific to this Contract, or &apos;Account&apos; if the settings should be inherited from the related Account. If &apos;Contract&apos; is selected, the system will automatically create Invoice Settings related to this Contract.</inlineHelpText>
    <label>Invoice Settings Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account</fullName>
                <default>true</default>
                <label>Account</label>
            </value>
            <value>
                <fullName>Contract</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>