.vscode/allianceuat_compare/force-app/main/default/objects/sirenum__ProActiveContract__c/fields/Timesheet_Approver__c.field-meta.xml
<CustomField>
    <fullName>Timesheet_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Timesheet Approver</label>
    <referenceTo>Timesheet_Approver__c</referenceTo>
    <relationshipLabel>WFM Contracts</relationshipLabel>
    <relationshipName>WFM_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>